Added ability to handle command line args in scenarios
Also moved the configuration logic to rely on command line arguments
instead of environment variables, both for the configuration file
customization and specifying the postgres installation location.

This should be simpler to use than the previous environment variable
approach, but environment variables with getenv are still available to
scenarios.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "_3p-lua/toml"]
 	path = _3p-lua/toml
 	url = https://github.com/LebJe/toml.lua.git
+[submodule "_3p-lua/argparse"]
+	path = _3p-lua/argparse
+	url = https://github.com/mpeterv/argparse
