--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -11,7 +11,8 @@ jobs:
       matrix:
         ubuntu_version: [22,24]
         build_type: [Debug,RelWithDebInfo]
-        compiler: [gcc, clang]
+        compiler: [gcc, clang-19]
+      fail-fast: false
     uses: ./.github/workflows/build-and-test.yml
     with:
       ubuntu_version: ${{ matrix.ubuntu_version }}
