Added a basic test framework for actions.
This just runs SQL queries using a single connection and fails if
any of the queries fail.

--- a/libstormweaver/test/unit/CMakeLists.txt
+++ b/libstormweaver/test/unit/CMakeLists.txt
@@ -1,12 +1,11 @@
-
 SET(UNITTEST_SOURCES
     main.cpp
     metadata_test.cpp
 )
 
-add_executable(stormweaver-unit ${UNITTEST_SOURCES})
-target_link_libraries(stormweaver-unit
+add_executable(test-stormweaver-unit ${UNITTEST_SOURCES})
+target_link_libraries(test-stormweaver-unit
     Catch2::Catch2 libstormweaver
 )
 
-add_test(NAME stormweaver-unit COMMAND sh -c "mkdir -p ${CMAKE_BINARY_DIR}/test-reports && $<TARGET_FILE:stormweaver-unit> --reporter=JUnit >${CMAKE_BINARY_DIR}/test-reports/stormweaver-unit.xml")
+add_test(NAME test-stormweaver-unit COMMAND sh -c "mkdir -p ${CMAKE_BINARY_DIR}/test-reports && $<TARGET_FILE:test-stormweaver-unit> --reporter=JUnit >${CMAKE_BINARY_DIR}/test-reports/test-stormweaver-unit.xml")
