Implemented a new, more detailed statistics system
Instead of just a per worker success/failure report this tracks
per action statistics, and also records timing for both action and sql
execution time. Failures are also more detailed, as it uses the error
codes/names added in the previous commit to distinguish different types
of failures.

--- a/libstormweaver/test/unit/CMakeLists.txt
+++ b/libstormweaver/test/unit/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(UNITTEST_SOURCES
     main.cpp
     metadata_test.cpp
+    statistics_test.cpp
 )
 
 add_executable(test-stormweaver-unit ${UNITTEST_SOURCES})
