--- a/libstormweaver/src/CMakeLists.txt
+++ b/libstormweaver/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(LIBRARY_SOURCES
     process/process.cpp
     random.cpp
     metadata.cpp
+    statistics.cpp
     workload.cpp
     scripting/luactx.cpp
     sql_variant/generic.cpp
