Metadata reload and validation
This commit adds Stormweaver the capability to:

1. load the metadata structure from an existing database instead of
relying on the in memory structures
2. adds a function to the lua interface which validates that the
   current metadata and the one in the database is the same

There's also a test script based on the validation function, but it's
only used for development for now, as there are some remaining issues
with the validation. Some of the issues might be still inonsistencies in
the in-memory metadata structure, while others are Postgres specifics
that either have to be ignored or handled specially (for example it's
possible that CREATE INDEX CONCURRENTLY succeeds, but the index fails
later, and then after some DDL operations it's automatically deleted)

But even with these limitations, this is a useful feature for testing
backup/restore with DDL operations involved.

The code is mostly Claude generated, but it has extensive test coverage
and was checked/tested properly.

--- a/libstormweaver/test/sql/CMakeLists.txt
+++ b/libstormweaver/test/sql/CMakeLists.txt
@@ -1,6 +1,9 @@
 SET(SQLTEST_SOURCES
     main.cpp
     ddl.cpp
+    schema_discovery.cpp
+    metadata_populator.cpp
+    worker_schema_discovery.cpp
 )
 
 add_executable(test-stormweaver-sql ${SQLTEST_SOURCES})
