Implement database checksums
These changes provide a new lua function, calculate_database_checksums
which creates a file with SHA hash based checksums about each table in
the current database.

This function can be used by backup/restore tests to verify integrity,
by creating checksums before taking a backup / after restoring a backup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ endif()
 find_package(Threads REQUIRED)
 #find_package(libmysqlclient REQUIRED)
 find_package(libpqxx REQUIRED)
+find_package(cryptopp REQUIRED)
 find_package(Catch2 REQUIRED)
 find_package(Boost REQUIRED)
 find_package(reflectcpp REQUIRED)
