--- a/libstormweaver/test/sql/CMakeLists.txt
+++ b/libstormweaver/test/sql/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(SQLTEST_SOURCES
     schema_discovery.cpp
     metadata_populator.cpp
     worker_schema_discovery.cpp
+    checksum.cpp
 )
 
 add_executable(test-stormweaver-sql ${SQLTEST_SOURCES})
